--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 17
           registry-url: https://registry.npmjs.org/
-          scope: "@hydre"
+          scope: '@hydre'
       - run: npm ci
       - run: npm publish
         env:
